test/bad/classes/method01.px

class Test def
    Int x

    func f() Int def
        return x
